[gd_scene load_steps=39 format=2]

[ext_resource path="res://chapters/01_hadoscaphe/common_resources/AutoScrollingSprite.tscn" type="PackedScene" id=1]
[ext_resource path="res://characters/char/Char.tscn" type="PackedScene" id=2]
[ext_resource path="res://chapters/01_hadoscaphe/common_resources/HadDoorButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://chapters/01_hadoscaphe/locations/maintenance/maintenance_set.png" type="Texture" id=4]
[ext_resource path="res://chapters/01_hadoscaphe/locations/maintenance/maintenance_screwdriver.png" type="Texture" id=5]
[ext_resource path="res://chapters/01_hadoscaphe/locations/maintenance/Maintenance.gd" type="Script" id=6]
[ext_resource path="res://chapters/01_hadoscaphe/locations/maintenance/maintenance_foreground.png" type="Texture" id=7]
[ext_resource path="res://objects/InteractiveObject.tscn" type="PackedScene" id=8]
[ext_resource path="res://objects/Passage.tscn" type="PackedScene" id=9]
[ext_resource path="res://chapters/01_hadoscaphe/locations/maintenance/maintenance_lever.png" type="Texture" id=10]
[ext_resource path="res://chapters/01_hadoscaphe/locations/maintenance/lever.ogg" type="AudioStream" id=11]
[ext_resource path="res://objects/SlidingDoor.tscn" type="PackedScene" id=12]
[ext_resource path="res://chapters/01_hadoscaphe/locations/maintenance/maintenance_door.png" type="Texture" id=13]
[ext_resource path="res://chapters/01_hadoscaphe/locations/maintenance/maintenance_door_cache.png" type="Texture" id=14]
[ext_resource path="res://chapters/01_hadoscaphe/locations/maintenance/maintenance_leftbuffetdoor.png" type="Texture" id=15]
[ext_resource path="res://chapters/01_hadoscaphe/locations/maintenance/maintenance_rightbuffetdoor.png" type="Texture" id=16]
[ext_resource path="res://chapters/01_hadoscaphe/locations/maintenance/maintenance_leverbuffet.png" type="Texture" id=17]
[ext_resource path="res://chapters/01_hadoscaphe/locations/maintenance/LeverBuffetSprite.gd" type="Script" id=18]
[ext_resource path="res://chapters/01_hadoscaphe/locations/maintenance/maintenance_ladder.png" type="Texture" id=19]
[ext_resource path="res://chapters/01_hadoscaphe/locations/maintenance/LadderSprite.gd" type="Script" id=20]
[ext_resource path="res://chapters/01_hadoscaphe/locations/maintenance/maintenance_leftbuffetdoor_shadow.png" type="Texture" id=21]
[ext_resource path="res://chapters/01_hadoscaphe/locations/maintenance/maintenance_redlight.png" type="Texture" id=22]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float u_amount = 0.01;

float get_noise(vec2 uv) {
    return fract(sin(dot(uv ,vec2(12.9898,78.233))) * 43758.5453);
}

void fragment() {
    float n = 2.0 * get_noise(UV + vec2(TIME, 0.0)) - 1.0;
    COLOR = texture(TEXTURE, UV) + n * u_amount;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/u_amount = 0.01

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 5, 4 )

[sub_resource type="Animation" id=4]
resource_name = "off_day"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PointOfInteraction:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -4, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "off_night"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PointOfInteraction:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -4, 0 ) ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PointOfInteraction:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "on_night"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PointOfInteraction:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "default_day"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=9]
resource_name = "default_night"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=10]
resource_name = "unscrewed_day"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=11]
resource_name = "unscrewed_night"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=12]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=13]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="NavigationPolygon" id=14]
vertices = PoolVector2Array( 95.3074, 139, 30.3074, 109, 50.3074, 104, 112.307, 124, 123.307, 139, 129, 124, 139.307, 136, 133, 152, 436.307, 152, 445.307, 162, 388.307, 168, 374.307, 153, 321.307, 151, 307.307, 137, 277.307, 154, 268.307, 137, 164.307, 153, 154.307, 138, 154.307, 136, 161.307, 138, 161.307, 136, 171.307, 136, 174.307, 125, 187.307, 125, 188, 128, 171.307, 130, 285.307, 170, 274.307, 181, 171.307, 180, 162.307, 169, 197, 128, 240, 129, 268.307, 132, 244.307, 125, 255.307, 125 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4 ), PoolIntArray( 4, 3, 5, 6, 7 ), PoolIntArray( 8, 9, 10, 11 ), PoolIntArray( 11, 10, 12, 13 ), PoolIntArray( 13, 12, 14, 15 ), PoolIntArray( 16, 7, 6, 17 ), PoolIntArray( 6, 18, 17 ), PoolIntArray( 16, 17, 19 ), PoolIntArray( 16, 19, 20, 21, 15 ), PoolIntArray( 22, 23, 24, 25 ), PoolIntArray( 15, 14, 26, 27, 28, 29, 16 ), PoolIntArray( 30, 31, 32, 15, 21, 25, 24 ), PoolIntArray( 31, 33, 34, 32 ), PoolIntArray( 22, 25, 22 ) ]
outlines = [ PoolVector2Array( 50.3074, 104, 112.307, 124, 129, 124, 139.307, 136, 154.307, 136, 154.307, 138, 161.307, 138, 161.307, 136, 171.307, 136, 171.307, 130, 174.307, 125, 174.307, 125, 187.307, 125, 188, 128, 197, 128, 240, 129, 244.307, 125, 255.307, 125, 268.307, 132, 268.307, 137, 307.307, 137, 374.307, 153, 436.307, 152, 445.307, 162, 388.307, 168, 321.307, 151, 277.307, 154, 285.307, 170, 274.307, 181, 171.307, 180, 162.307, 169, 164.307, 153, 133, 152, 123.307, 139, 95.3074, 139, 30.3074, 109 ) ]

[sub_resource type="Animation" id=15]
tracks/0/type = "value"
tracks/0/path = NodePath("DoorLeft/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Background:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Set:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ToLeverbuffet/LeverBuffetSprite/LeverBuffet_LeftDoor:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ToLeverbuffet/LeverBuffetSprite/LeverBuffet_RightDoor:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("GoToCryopod/LadderSprite:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("ToLeverbuffet/LeverBuffetSprite/LeverBuffet_LeftDoor/Shadow:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("RedLight:frame")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=16]
tracks/0/type = "value"
tracks/0/path = NodePath("DoorLeft/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Background:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Set:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ToLeverbuffet/LeverBuffetSprite/LeverBuffet_LeftDoor:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ToLeverbuffet/LeverBuffetSprite/LeverBuffet_RightDoor:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("GoToCryopod/LadderSprite:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("ToLeverbuffet/LeverBuffetSprite/LeverBuffet_LeftDoor/Shadow:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("RedLight:frame")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[node name="Maintenance" type="Node2D"]
material = SubResource( 2 )
position = Vector2( 1, 0 )
script = ExtResource( 6 )

[node name="AutoScrollingSprite" parent="." instance=ExtResource( 1 )]
speed_x = -0.2

[node name="Set" type="Sprite" parent="."]
use_parent_material = true
position = Vector2( -1, 0 )
texture = ExtResource( 4 )
centered = false
hframes = 2
frame = 1
__meta__ = {
"_edit_lock_": true
}

[node name="LeftDoorButton" parent="." instance=ExtResource( 3 )]
position = Vector2( 53, 90 )
action_name = "LeftDoorButton"
action_type = "push"
flip_h = true
door_id = 7

[node name="Lever" parent="." instance=ExtResource( 8 )]
position = Vector2( 210, 109 )
action_name = "Lever"
action_type = "push"

[node name="CollisionShape2D" parent="Lever" index="0"]
position = Vector2( -1, 0 )
shape = SubResource( 3 )

[node name="Animation" parent="Lever" index="2"]
autoplay = "off_day"
anims/off_day = SubResource( 4 )
anims/off_night = SubResource( 5 )
anims/on_day = SubResource( 6 )
anims/on_night = SubResource( 7 )

[node name="PointOfInteraction" parent="Lever" index="3"]
position = Vector2( 3, 0 )

[node name="Sprite" type="Sprite" parent="Lever"]
texture = ExtResource( 10 )
vframes = 2
hframes = 2
frame = 1

[node name="LeverSound" type="AudioStreamPlayer2D" parent="Lever"]
stream = ExtResource( 11 )
bus = "Fx"

[node name="GoToCryopod" parent="." groups=[
"arrow_N",
] instance=ExtResource( 9 )]
use_parent_material = true
position = Vector2( 425, 72 )
to_room = "cryopod"
to_x = 190
to_y = 158

[node name="CollisionPolygon2D" parent="GoToCryopod" index="0"]
polygon = PoolVector2Array( -19, -15, -14, -7, -11, -7, -11, 78, 1, 78, 1, -7, 5, -7, 10, -16 )

[node name="PointToRoom" parent="GoToCryopod" index="1"]
position = Vector2( -5, 84 )

[node name="LadderSprite" type="Sprite" parent="GoToCryopod"]
position = Vector2( -4, 32 )
texture = ExtResource( 19 )
hframes = 2
frame = 1
script = ExtResource( 20 )

[node name="ToLeverbuffet" parent="." groups=[
"cursor_eye",
] instance=ExtResource( 9 )]
position = Vector2( 211, 131 )
to_room = "leverbuffet"
room_without_char = true
action_type = "pick"

[node name="CollisionPolygon2D" parent="ToLeverbuffet" index="0"]
polygon = PoolVector2Array( -14, -17, 27, -18, 27, -3, -14, -4 )

[node name="LeverBuffetSprite" type="Sprite" parent="ToLeverbuffet"]
position = Vector2( 7, -10 )
texture = ExtResource( 17 )
vframes = 2
hframes = 2
frame = 1
script = ExtResource( 18 )

[node name="LeverBuffet_LeftDoor" type="Sprite" parent="ToLeverbuffet/LeverBuffetSprite"]
position = Vector2( -18, 5 )
texture = ExtResource( 15 )
hframes = 2
frame = 1

[node name="Shadow" type="Sprite" parent="ToLeverbuffet/LeverBuffetSprite/LeverBuffet_LeftDoor"]
position = Vector2( -6, 6 )
texture = ExtResource( 21 )
hframes = 2
frame = 1

[node name="LeverBuffet_RightDoor" type="Sprite" parent="ToLeverbuffet/LeverBuffetSprite"]
position = Vector2( 20, 0 )
texture = ExtResource( 16 )
hframes = 2
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="ToLeverbuffet/LeverBuffetSprite"]
anims/default_day = SubResource( 8 )
anims/default_night = SubResource( 9 )
anims/unscrewed_day = SubResource( 10 )
anims/unscrewed_night = SubResource( 11 )

[node name="Screwdriver" type="Sprite" parent="."]
position = Vector2( 217, 126 )
texture = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Screwdriver"]

[node name="RedLight" type="Sprite" parent="."]
position = Vector2( 9, 78 )
texture = ExtResource( 22 )
hframes = 2
frame = 1

[node name="Background" type="Sprite" parent="."]
use_parent_material = true
position = Vector2( 38, 88 )
texture = ExtResource( 14 )
hframes = 2
frame = 1

[node name="DoorLeft" parent="." instance=ExtResource( 12 )]
position = Vector2( 38, 88 )
to_room = "reactor"
to_x = 382
to_y = 160
flip_h = true
door_id = 7

[node name="CollisionPolygon2D" parent="DoorLeft" index="0"]
polygon = PoolVector2Array( -11, -20, 11, -17, 11, 15, -12, 20 )

[node name="PointToRoom" parent="DoorLeft" index="1"]
position = Vector2( 3, 18 )

[node name="Sprite" parent="DoorLeft" index="2"]
texture = ExtResource( 13 )
hframes = 2
frame = 1

[node name="AnimationPlayer" parent="DoorLeft" index="6"]
anims/day = SubResource( 12 )
anims/night = SubResource( 13 )

[node name="Char" parent="." instance=ExtResource( 2 )]

[node name="Line2D" parent="Char" index="0"]
visible = false
default_color = Color( 1, 1, 1, 1 )
joint_mode = 1
end_cap_mode = 2
antialiased = true

[node name="Sprite" parent="Char" index="1"]
position = Vector2( 192, 146 )

[node name="Eyes" parent="Char/Sprite" index="1"]
position = Vector2( 1, -37 )

[node name="EyesPosition" parent="Char/Sprite" index="3"]
visible = false

[node name="NavigationPolygonInstance" parent="Char/Navigation2D" index="0"]
visible = false
position = Vector2( -1, 0 )
navpoly = SubResource( 14 )

[node name="Foreground" type="Sprite" parent="."]
use_parent_material = true
position = Vector2( 54, 74 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/day = SubResource( 15 )
anims/night = SubResource( 16 )
[connection signal="order_interaction" from="LeftDoorButton" to="." method="_on_LeftDoorButton_order_interaction"]
[connection signal="order_interaction" from="Lever" to="." method="_on_Lever_order_interaction"]
[connection signal="area_entered" from="GoToCryopod" to="GoToCryopod/LadderSprite" method="_on_GoToCryopod_area_entered"]
[connection signal="area_exited" from="GoToCryopod" to="GoToCryopod/LadderSprite" method="_on_GoToCryopod_area_exited"]
[connection signal="area_entered" from="ToLeverbuffet" to="ToLeverbuffet/LeverBuffetSprite" method="_on_ToLeverbuffet_area_entered"]
[connection signal="area_exited" from="ToLeverbuffet" to="ToLeverbuffet/LeverBuffetSprite" method="_on_ToLeverbuffet_area_exited"]

[editable path="LeftDoorButton"]

[editable path="Lever"]

[editable path="GoToCryopod"]

[editable path="ToLeverbuffet"]

[editable path="DoorLeft"]

[editable path="Char"]
